fix: align content

--- a/style.css
+++ b/style.css
@@ -270,6 +270,7 @@ main .container {
     height: calc(100vh - 180px);
     width: 100%;
     padding-top:20px ;
+    align-content: flex-start;
 }
 
 #content .row-nav {
